--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -401,3 +401,47 @@ body {
   font-size: var(--fs-8);
   margin-block-end: 30px;
 }
+
+/*-----------------------------------*\
+  #ABOUT
+\*-----------------------------------*/
+
+.about-banner {
+  margin-block-end: 30px;
+}
+
+.about .section-title {
+  margin-inline: 0;
+}
+
+.about .underline::before {
+  left: 0;
+  transform: translateX(0);
+}
+
+.about-text {
+  font-size: var(--fs-8);
+  margin-block-end: 20px;
+}
+
+.stats-list {
+  display: grid;
+  gap: 30px;
+}
+
+.stats-card {
+  text-align: center;
+  padding: 15px;
+  box-shadow: var(--shadow);
+  border-radius: var(--radius-12);
+}
+
+.stats-title {
+  color: var(--st-patricks-blue);
+  font-size: var(--fs-2);
+  font-weight: var(--fw-700);
+}
+
+.stats-text {
+  font-size: var(--fs-8);
+}
